# detection_of_aortic_aneurysm

./: .gitignore  README.md  pyproject.toml  requirements.txt
aneurysm_detection/: detect.py  plot.py  utils.py
